Sat Aug 10 09:20:21 2013  Zachary Scott  <e@zzak.io>

	* NEWS: [DOC] typo in example reported by @moretea
	  https://github.com/ruby/ruby/commit/a39e724#commitcomment-3831489

Sat Aug 10 09:19:04 2013  Zachary Scott  <e@zzak.io>

	* proc.c: [DOC] rdoc code formatting

Sat Aug 10 09:12:01 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (rb_id_attrset): check if the argument is valid type as an
	  attribute.

Sat Aug 10 05:44:08 2013  Zachary Scott  <e@zzak.io>

	* lib/rss/trackback.rb: [DOC] Hide RSS::Trackback from rdoc
	  Patch by Steve Klabnik [Bug #8755] [ruby-core:56456]

Sat Aug 10 04:52:21 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big_div_struct): Use size_t.
	  (bigdivrem1): Ditto.
	  (bigdivrem_num_extra_words): Ditto.
	  (bigdivrem_single): Ditto.
	  (bigdivrem_normal): Ditto.
	  (bary_divmod): Ditto.

Fri Aug  9 23:47:15 2013  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/rexmlparser.rb: Remove needless REXML version check.
	  Both RSS Parser and REXML are bundled in Ruby. RSS Parser can
	  always use the latest REXML. [Bug #8754] [ruby-core:56454]
	  Patch by Steve Klabnik. Thanks!!!

Fri Aug  9 22:51:10 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (XLDFLAGS, LIBRUBYARG_STATIC): CoreFoundation framework
	  option is now needed always, regardless enable-shared.
	  [ruby-core:56467] [Bug #8759]

Fri Aug  9 22:20:51 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (load_file_internal): use rb_parser_compile_string_path and
	  rb_parser_compile_file_path, String path name versions.  [Bug #8753]

Fri Aug  9 07:16:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* ext/io/console/console.c: delete redefinition of rb_cloexec_open.
	  drop support for 1.8 and 1.9 from the next release of io-console gem.

Fri Aug  9 19:13:54 2013  Koichi Sasada  <ko1@atdot.net>

	* NEWS: update about new methods for Binding.

Fri Aug  9 18:48:09 2013  Koichi Sasada  <ko1@atdot.net>
